[metadata]
name = jira_pre_commit_hook
version = 1.0
description = Jira commit hook

[options]
packages = find:
install_requires =
    requests
    jira
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    gjira = gjira.__main__:main

[options.packages.find]
exclude =
    tests*
    testing*
