[metadata]
name = jira_pre_commit_hook
version = 1.0
description = Jira commit hook

[options]
packages = find:
install_requires =
    jira==2.0.0
    Jinja2==3.1.2
    click==7.1.2
python_requires=>=3.0.0

[options.entry_points]
console_scripts =
    gjira = gjira.__main__:main

[options.packages.find]
exclude =
    tests*
    testing*
